--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/mapped-types": "^0.3.0",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/swagger": "^4.7.13",
     "@nestjs/typeorm": "^7.1.5",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.13.1",
@@ -31,6 +32,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
     "sqlite3": "^5.0.2",
+    "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.31"
   },
   "devDependencies": {
