--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@nestjs/swagger": "^4.7.13",
     "@nestjs/typeorm": "^7.1.5",
     "@types/aws-sdk": "^2.7.0",
+    "@types/uuid": "^8.3.0",
     "aws-sdk": "^2.848.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.13.1",
@@ -36,7 +37,8 @@
     "rxjs": "^6.6.3",
     "sqlite3": "^5.0.2",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.31"
+    "typeorm": "^0.2.31",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
