--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
 		"@react-navigation/native": "^5.9.2",
 		"@ui-kitten/components": "^5.0.0",
 		"@ui-kitten/eva-icons": "5.0.0",
+		"axios": "^0.21.1",
 		"react": "16.11.0",
 		"react-native": "0.62.2",
 		"react-native-svg": "^12.1.0"
