--- a/app/package.json
+++ b/app/package.json
@@ -11,13 +11,20 @@
 	},
 	"dependencies": {
 		"@eva-design/eva": "^2.0.0",
+		"@react-native-community/masked-view": "^0.1.10",
+		"@react-navigation/material-top-tabs": "^5.3.13",
 		"@react-navigation/native": "^5.9.2",
 		"@ui-kitten/components": "^5.0.0",
 		"@ui-kitten/eva-icons": "5.0.0",
 		"axios": "^0.21.1",
 		"react": "16.11.0",
 		"react-native": "0.62.2",
-		"react-native-svg": "^12.1.0"
+		"react-native-gesture-handler": "^1.10.1",
+		"react-native-reanimated": "^1.13.2",
+		"react-native-safe-area-context": "^3.1.9",
+		"react-native-screens": "^2.17.1",
+		"react-native-svg": "^12.1.0",
+		"react-native-tab-view": "^2.15.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.6.2",
