--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,7 +1,8 @@
 NODE_ENV=development
 PORT=5000
+DOMAIN_NAME=http://localhost:5000
 
 AWS_REGION=eu-central-1
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_PUBLIC_BUCKET_NAME=
+AWS_PRIVATE_BUCKET_NAME=
