--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
 		"axios": "^0.21.1",
 		"react": "16.11.0",
 		"react-native": "0.62.2",
+		"react-native-dotenv": "^2.5.3",
 		"react-native-svg": "^12.1.0"
 	},
 	"devDependencies": {
@@ -25,6 +26,7 @@
 		"@react-native-community/eslint-config": "^1.0.0",
 		"@types/jest": "^24.0.24",
 		"@types/react-native": "^0.62.0",
+		"@types/react-native-dotenv": "^0.2.0",
 		"@types/react-test-renderer": "16.9.2",
 		"@typescript-eslint/eslint-plugin": "^2.25.0",
 		"@typescript-eslint/parser": "^2.25.0",
