--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
 		"@react-native-community/masked-view": "^0.1.10",
 		"@react-navigation/material-top-tabs": "^5.3.13",
 		"@react-navigation/native": "^5.9.2",
+		"@react-navigation/stack": "^5.14.3",
 		"@ui-kitten/components": "^5.0.0",
 		"@ui-kitten/eva-icons": "5.0.0",
 		"axios": "^0.21.1",
