--- a/server/.env.sample
+++ b/server/.env.sample
@@ -6,5 +6,8 @@ AWS_REGION=eu-central-1
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_PRIVATE_BUCKET_NAME=
-
 JWT_SECRET=
+
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_DB=database
