Fix .env file using react-native-dotenv

--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
 		"axios": "^0.21.1",
 		"react": "16.11.0",
 		"react-native": "0.62.2",
+		"react-native-dotenv": "^2.5.3",
 		"react-native-svg": "^12.1.0"
 	},
 	"devDependencies": {
