--- a/app/package.json
+++ b/app/package.json
@@ -28,7 +28,8 @@
 		"react-native-safe-area-context": "^3.1.9",
 		"react-native-screens": "^2.17.1",
 		"react-native-svg": "^12.1.0",
-		"react-native-tab-view": "^2.15.2"
+		"react-native-tab-view": "^2.15.2",
+		"react-query": "^3.12.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.6.2",
