--- a/app/ios/Podfile
+++ b/app/ios/Podfile
@@ -1,10 +1,11 @@
-require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 require_relative '../node_modules/react-native/scripts/react_native_pods'
+require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
 platform :ios, '10.0'
 
 target 'Giraffe' do
   config = use_native_modules!
+
   use_react_native!(:path => config["reactNativePath"])
 
   target 'GiraffeTests' do
@@ -16,10 +17,10 @@ target 'Giraffe' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!
-  post_install do |installer|
-    flipper_post_install(installer)
-  end
+  # use_flipper!
+  # post_install do |installer|
+  #   flipper_post_install(installer)
+  # end
 end
 
 target 'Giraffe-tvOS' do
