--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,7 @@
 		"@ui-kitten/eva-icons": "5.0.0",
 		"axios": "^0.21.1",
 		"react": "16.13.1",
-		"react-native": "0.63.4",
+		"react-native": "^0.63.4",
 		"react-native-document-picker": "^5.0.0",
 		"react-native-dotenv": "^2.5.3",
 		"react-native-gesture-handler": "^1.10.1",
