--- a/app/package.json
+++ b/app/package.json
@@ -37,7 +37,8 @@
 		"@react-native-community/eslint-config": "^1.0.0",
 		"@types/jest": "^24.0.24",
 		"@types/node": "^14.14.31",
-		"@types/react-native": "^0.62.0",
+		"@types/react": "^17.0.2",
+		"@types/react-native": "^0.62.18",
 		"@types/react-test-renderer": "16.9.2",
 		"@typescript-eslint/eslint-plugin": "^4.15.2",
 		"@typescript-eslint/parser": "^4.15.2",
