--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,9 +4,9 @@ ENV NODE_ENV=development
 WORKDIR /app
 
 COPY ./package*.json ./
-
 RUN npm install
 
 COPY . .
+RUN npm run build
 
-CMD ["npm", "start"]
+CMD ["npm", "start:prod"]
