--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up",
+    "docker:dev:stop": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml down && docker-compose -f docker-compose.yml -f docker-compose.dev.yml rm",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "test": "jest",
