--- a/app/package.json
+++ b/app/package.json
@@ -29,7 +29,8 @@
 		"react-native-screens": "^2.17.1",
 		"react-native-svg": "^12.1.0",
 		"react-native-tab-view": "^2.15.2",
-		"react-query": "^3.12.0"
+		"react-query": "^3.12.0",
+		"tailwind-react-native-classnames": "^1.2.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.6.2",
