Fix ios sticker upload

--- a/app/ios/Giraffe/Info.plist
+++ b/app/ios/Giraffe/Info.plist
@@ -55,5 +55,7 @@
 	<false/>
 	<key>UIAppFonts</key>
 	<array/>
+  <key>NSPhotoLibraryUsageDescription</key>
+  <string>Photo Library Access Warning</string>
 </dict>
 </plist>
