Change docker compose again to only have a Postgres docker during development

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -8,6 +8,7 @@ AWS_SECRET_ACCESS_KEY=
 AWS_PRIVATE_BUCKET_NAME=
 JWT_SECRET=
 
+POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_DB=database
