--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
-    "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up",
-    "docker:dev:stop": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml down && docker-compose -f docker-compose.yml -f docker-compose.dev.yml rm",
+    "docker:postgres": "docker-compose -f docker-compose.postgres.yml up -d",
+    "docker:postgres:stop": "docker-compose -f docker-compose.postgres.yml down && docker-compose -f docker-compose.postgres.yml down",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "test": "jest",
