--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
+    "docker:dev": "npm run docker:postgres && nest start --watch",
     "docker:postgres": "docker-compose -f docker-compose.postgres.yml up -d",
     "docker:postgres:stop": "docker-compose -f docker-compose.postgres.yml down && docker-compose -f docker-compose.postgres.yml down",
     "start:debug": "nest start --debug --watch",
@@ -19,7 +20,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "task:client-gen": "set CLIENT_GEN=true&& nest start"
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
@@ -38,6 +40,7 @@
     "class-transformer": "^0.3.1",
     "class-validator": "^0.13.1",
     "dotenv": "^8.2.0",
+    "nest-openapi-tools": "^3.0.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
