Add sharp package dependencies for image manipulation

--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "@nestjs/swagger": "^4.7.13",
     "@nestjs/typeorm": "^7.1.5",
     "@types/aws-sdk": "^2.7.0",
+    "@types/sharp": "^0.27.1",
     "@types/uuid": "^8.3.0",
     "aws-sdk": "^2.848.0",
     "bcrypt": "^5.0.0",
@@ -45,6 +46,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
+    "sharp": "^0.27.2",
     "sqlite3": "^5.0.2",
     "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.31",
