Convert/resize created stickers to appropriate Whatsapp sticker formats

--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "docker:dev": "npm run docker:postgres && nest start --watch",
     "docker:postgres": "docker-compose -f docker-compose.postgres.yml up -d",
     "docker:postgres:stop": "docker-compose -f docker-compose.postgres.yml down && docker-compose -f docker-compose.postgres.yml down",
+    "docker:postgres:clear": "docker rm -f postgres && docker volume rm server_kangaroo-db",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "test": "jest",
