--- a/app/package.json
+++ b/app/package.json
@@ -33,7 +33,8 @@
 		"react-native-tab-view": "^2.15.2",
 		"react-native-url-polyfill": "^1.2.0",
 		"react-query": "^3.12.0",
-		"tailwind-react-native-classnames": "^1.2.0"
+		"tailwind-react-native-classnames": "^1.2.0",
+		"validate.js": "^0.13.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.6.2",
