--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "task:client-gen": "set CLIENT_GEN=true&& nest start"
   },
   "dependencies": {
+    "@gumlet/gif-resize": "^1.3.0",
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/jwt": "^7.2.0",
