--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
 		"@eva-design/eva": "^2.0.0",
 		"@react-native-community/async-storage": "^1.12.1",
 		"@react-native-community/masked-view": "^0.1.10",
+		"@react-navigation/bottom-tabs": "^5.11.8",
 		"@react-navigation/material-top-tabs": "^5.3.13",
 		"@react-navigation/native": "^5.9.2",
 		"@react-navigation/stack": "^5.14.3",
