Update docker file to support gifsicle

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,10 @@
 FROM node:15-alpine
 ENV NODE_ENV=development
 
+ENV BUILD_DEPS autoconf autoremake
+
+RUN apk update && apk add --update --no-cache --virtual .build-deps autoconf file gcc libc-dev make g++ pkgconf re2c git automake
+
 WORKDIR /app
 
 COPY ./package*.json ./
