--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@eva-design/eva": "^2.0.0",
+		"@react-native-clipboard/clipboard": "^1.7.0",
 		"@react-native-community/async-storage": "^1.12.1",
 		"@react-native-community/masked-view": "^0.1.10",
 		"@react-navigation/bottom-tabs": "^5.11.8",
