Rename server folder to kangaroo-server and change giraffe mentions to kangaroo

--- a/kangaroo-server/Dockerfile
+++ b/kangaroo-server/Dockerfile
@@ -3,6 +3,7 @@ ENV NODE_ENV=development
 
 ENV BUILD_DEPS autoconf autoremake
 
+# needed to make gifsicle work in alpine
 RUN apk update && apk add --update --no-cache --virtual .build-deps autoconf file gcc libc-dev make g++ pkgconf re2c git automake
 
 WORKDIR /app
