--- a/app/package.json
+++ b/app/package.json
@@ -35,6 +35,7 @@
 		"react-native-svg": "^12.1.0",
 		"react-native-tab-view": "^2.15.2",
 		"react-native-url-polyfill": "^1.2.0",
+		"react-native-whatsapp-stickers": "^2.0.2",
 		"react-query": "^3.12.0",
 		"tailwind-react-native-classnames": "^1.2.0",
 		"validate.js": "^0.13.1"
