--- a/app/package.json
+++ b/app/package.json
@@ -20,13 +20,17 @@
 		"@react-navigation/stack": "^5.14.3",
 		"@ui-kitten/components": "^5.0.0",
 		"@ui-kitten/eva-icons": "5.0.0",
+		"@yz1311/react-native-intent-launcher": "^0.2.1",
 		"axios": "^0.21.1",
+		"buffer": "^5.7.1",
 		"dayjs": "^1.10.4",
 		"prop-types": "^15.7.2",
 		"react": "16.13.1",
 		"react-native": "^0.63.4",
+		"react-native-device-info": "^8.0.5",
 		"react-native-document-picker": "^5.0.0",
 		"react-native-dotenv": "^2.5.3",
+		"react-native-fs": "^2.16.6",
 		"react-native-gesture-handler": "^1.10.1",
 		"react-native-image-crop-picker": "^0.36.0",
 		"react-native-reanimated": "^1.13.2",
