--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -228,6 +228,7 @@ dependencies {
     implementation "com.facebook.fresco:webpsupport:$fresco_version"
     implementation "com.facebook.fresco:animated-webp:$fresco_version"
     implementation "com.facebook.fresco:animated-base:$fresco_version"
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
 
 // Run this once to be able to run the application with BUCK
