--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
 		"react-native": "^0.63.4",
 		"react-native-document-picker": "^5.0.0",
 		"react-native-dotenv": "^2.5.3",
+		"react-native-fs": "^2.16.6",
 		"react-native-gesture-handler": "^1.10.1",
 		"react-native-image-crop-picker": "^0.36.0",
 		"react-native-reanimated": "^1.13.2",
