--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,8 @@
 		"ios": "react-native run-ios",
 		"start": "react-native start",
 		"test": "jest",
-		"lint": "eslint --fix --ext .js,.jsx,.ts,.tsx ."
+		"lint": "eslint --fix --ext .js,.jsx,.ts,.tsx .",
+		"build": "cd android && gradlew assembleRelease"
 	},
 	"dependencies": {
 		"@eva-design/eva": "^2.0.0",
