--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -7,10 +7,8 @@ on:
     branches:
       - master
   pull_request:
-    branches: 
-      - "*"
     paths:
-      - "app/*"
+      - 'app/*'
 
 jobs:
   build-apk:
