Add POSTGRES_PORT .env for server (Railway uses non-default ports)

--- a/kangaroo-server/.env.sample
+++ b/kangaroo-server/.env.sample
@@ -9,6 +9,7 @@ AWS_PRIVATE_BUCKET_NAME=
 JWT_SECRET=
 
 POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_DB=database
