--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
 		"react-native": "^0.63.5",
 		"react-native-config": "^1.4.2",
 		"react-native-document-picker": "^5.0.0",
+		"react-native-floating-action": "^1.22.0",
 		"react-native-fs": "^2.16.6",
 		"react-native-gesture-handler": "^1.10.1",
 		"react-native-image-crop-picker": "^0.36.0",
