Make NPM install work

--- a/app/package.json
+++ b/app/package.json
@@ -19,16 +19,16 @@
 		"@react-navigation/material-top-tabs": "^5.3.13",
 		"@react-navigation/native": "^5.9.2",
 		"@react-navigation/stack": "^5.14.3",
-		"@ui-kitten/components": "^5.0.0",
-		"@ui-kitten/eva-icons": "5.0.0",
+		"@ui-kitten/components": "^5.1.2",
+		"@ui-kitten/eva-icons": "^5.1.2",
 		"axios": "^0.21.1",
 		"dayjs": "^1.10.4",
 		"prop-types": "^15.7.2",
 		"react": "16.13.1",
 		"react-native": "^0.63.5",
-		"react-native-config": "^1.4.2",
+		"react-native-config": "^1.4.11s",
 		"react-native-document-picker": "^5.0.0",
-		"react-native-fs": "^2.16.6",
+		"react-native-fs": "^2.20.0",
 		"react-native-gesture-handler": "^1.10.1",
 		"react-native-image-crop-picker": "^0.36.0",
 		"react-native-reanimated": "^1.13.2",
@@ -50,11 +50,11 @@
 		"@types/react": "^17.0.2",
 		"@types/react-native": "^0.63.50",
 		"@types/react-test-renderer": "16.9.2",
-		"@typescript-eslint/eslint-plugin": "^4.15.2",
-		"@typescript-eslint/parser": "^4.15.2",
-		"@ui-kitten/metro-config": "5.0.0",
+		"@typescript-eslint/eslint-plugin": "^5.48.1",
+		"@typescript-eslint/parser": "^5.48.1",
+		"@ui-kitten/metro-config": "^5.1.2",
 		"babel-jest": "^24.9.0",
-		"eslint": "^7.20.0",
+		"eslint": "^8.31.0",
 		"jest": "^24.9.0",
 		"metro-react-native-babel-preset": "^0.58.0",
 		"prettier": "^2.0.2",
