--- a/app/package.json
+++ b/app/package.json
@@ -19,19 +19,19 @@
 		"@react-navigation/material-top-tabs": "^5.3.13",
 		"@react-navigation/native": "^5.9.2",
 		"@react-navigation/stack": "^5.14.3",
-		"@ui-kitten/components": "^5.0.0",
-		"@ui-kitten/eva-icons": "5.0.0",
+		"@ui-kitten/components": "^5.1.2",
+		"@ui-kitten/eva-icons": "5.1.2",
 		"axios": "^0.21.1",
 		"dayjs": "^1.10.4",
 		"prop-types": "^15.7.2",
-		"react": "16.13.1",
-		"react-native": "^0.63.5",
+		"react": "18.2.0",
+		"react-native": "^0.71.0",
 		"react-native-config": "^1.4.2",
 		"react-native-document-picker": "^5.0.0",
 		"react-native-fs": "^2.16.6",
 		"react-native-gesture-handler": "^1.10.1",
 		"react-native-image-crop-picker": "^0.36.0",
-		"react-native-reanimated": "^1.13.2",
+		"react-native-reanimated": "^1.13.4",
 		"react-native-safe-area-context": "^3.1.9",
 		"react-native-screens": "^2.17.1",
 		"react-native-svg": "^12.1.0",
@@ -42,25 +42,27 @@
 		"validate.js": "^0.13.1"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.6.2",
-		"@babel/runtime": "^7.6.2",
-		"@react-native-community/eslint-config": "^1.0.0",
-		"@types/jest": "^24.0.24",
+		"@babel/core": "^7.12.9",
+		"@babel/preset-env": "^7.14.0",
+		"@babel/runtime": "^7.12.5",
+		"@react-native-community/eslint-config": "^3.0.0",
+		"@tsconfig/react-native": "^2.0.2",
+		"@types/jest": "^29.2.1",
 		"@types/node": "^14.14.31",
-		"@types/react": "^17.0.2",
-		"@types/react-native": "^0.63.50",
-		"@types/react-test-renderer": "16.9.2",
-		"@typescript-eslint/eslint-plugin": "^4.15.2",
-		"@typescript-eslint/parser": "^4.15.2",
-		"@ui-kitten/metro-config": "5.0.0",
-		"babel-jest": "^24.9.0",
-		"eslint": "^7.20.0",
+		"@types/react": "^18.0.24",
+		"@types/react-native": "^0.71.0",
+		"@types/react-test-renderer": "^18.0.0",
+		"@typescript-eslint/eslint-plugin": "^5.48.1",
+		"@typescript-eslint/parser": "^5.48.1",
+		"@ui-kitten/metro-config": "5.1.2",
+		"babel-jest": "^29.2.1",
+		"eslint": "^8.19.0",
 		"jest": "^24.9.0",
-		"metro-react-native-babel-preset": "^0.58.0",
-		"prettier": "^2.0.2",
-		"react-test-renderer": "16.11.0",
+		"metro-react-native-babel-preset": "0.73.5",
+		"prettier": "^2.4.1",
+		"react-test-renderer": "18.2.0",
 		"tailwind-rn": "^3.0.1",
-		"typescript": "^3.9.9"
+		"typescript": "^4.8.4"
 	},
 	"jest": {
 		"preset": "react-native",
