--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
 		"@ui-kitten/eva-icons": "5.0.0",
 		"axios": "^0.21.1",
 		"dayjs": "^1.10.4",
+		"jwt-decode": "^3.1.2",
 		"prop-types": "^15.7.2",
 		"react": "16.13.1",
 		"react-native": "^0.63.5",
