--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -17,16 +17,22 @@ jobs:
     defaults:
       run:
         working-directory: ./app
-        
+
     env:
       ENVFILE: .env.prod
 
-    steps: 
-      - uses: actions/checkout@v2
+    steps:
+      - uses: actions/checkout@v3
 
-      - name: Install npm dependencies
-        run: |
-          npm install
+      - name: Set Node.js 16.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+
+      - name: Run install
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: install
 
       - name: Build Android Release
         run: |
