--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
 		"@eva-design/eva": "^2.0.0",
 		"@react-native-async-storage/async-storage": "^1.17.11",
 		"@react-native-clipboard/clipboard": "^1.7.0",
+		"@react-native-community/cli-platform-android": "^10.1.3",
 		"@react-native-masked-view/masked-view": "^0.2.8",
 		"@react-navigation/bottom-tabs": "^6.5.3",
 		"@react-navigation/material-top-tabs": "^6.5.2",
