Add directory to yarn action

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -33,6 +33,7 @@ jobs:
         uses: borales/actions-yarn@v4
         with:
           cmd: install
+          dir: 'app'
 
       - name: Build Android Release
         run: |
