--- a/kangaroo-server/package.json
+++ b/kangaroo-server/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@gumlet/gif-resize": "^1.3.0",
     "@nestjs/common": "^9.2.1",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.2.1",
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/mapped-types": "^1.2.0",
@@ -44,6 +45,7 @@
     "class-validator": "^0.13.1",
     "dotenv": "^8.2.0",
     "nest-openapi-tools": "^3.0.0",
+    "nest-typed-config": "^2.4.7",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
